syntax = "proto3";

package client;


message Client {
  string id = 1;
  string title = 2;
  string description = 3;
}

message GetClientRequest {
  string client_id = 1;
}

message GetClientResponse {
  Client client = 1;
}

message SearchClientsRequest {
  string query = 1;
}

message SearchClientsResponse {
  repeated Client clients = 1;
}

service ClientService {
  rpc GetClient(GetClientRequest) returns (GetClientResponse);
  rpc SearchClients(SearchClientsRequest) returns (SearchClientsResponse);
}
